MHB-44 feat(moderation): harden violation report resolution workflow